k8s/protaus-gcp-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "protaus"
  namespace: "default"
  labels:
    app: "protaus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "protaus"
  template:
    metadata:
      labels:
        app: "protaus"
    spec:
      serviceAccountName: gke-service-account
      containers:
      - name: "protaus"
        image: "eu.gcr.io/pol-reportzen-dev-005/protaus:latest"
#        resources:
#         limits:
#           memory: 256Mi
#           cpu: "0.5"
#         requests:
#           memory: 256Mi
#           cpu: "0.2"
        ports:
          - containerPort: 8080
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
          - "/cloud_sql_proxy"
          - "-log_debug_stdout"
          - "-instances=pol-reportzen-dev-005:europe-west2:sql-reportzen=tcp:5432"
          - "-dir=/cloudsql/pol-reportzen-dev-005:europe-west2:sql-reportzen"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: vol-reportzen-workloadid
          mountPath: /secrets/
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
      volumes:
       - name: vol-reportzen-workloadid
         secret:
           secretName: secret-key-workloadid
