k8s/reportzen-gcp-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "reportzen"
  namespace: "default"
  labels:
    app: "reportzen"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "reportzen"
  template:
    metadata:
      labels:
        app: "reportzen"
    spec:
      serviceAccountName: gke-service-account
      containers:
        - name: "reportzen-sha256-1"
          image: "eu.gcr.io/pol-reportzen-dev-005/reportzen@sha256:1d7a80a891d8b4eee6385108372d96553970eb3541a3b4904598a8de639d6bc8"
          ports:
            - containerPort: 80
