k8s/microgiants-gcp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: microgiants
spec:
    type: ClusterIP
    ports:
    - port: 8080 
    selector:
        app: microgiants
