k8s/protaus-gcp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: protaus
spec:
    type: ClusterIP
    ports:
    - port: 8080
    selector:
        app: protaus
