k8s/reportzen-gcp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: reportzen
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: reportzen
