k8s/microgiants-gcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: microgiants
  labels:
    app: microgiants
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /microgiants(/(.*))?$
            pathType: Prefix
            backend:
              service:
                name: microgiants
                port:
                  number: 8080
