k8s/protaus-gcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default  
  name: protaus
  labels:
    app: protaus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /protaus(/(.*))?$
            pathType: Prefix
            backend:
              service:
                name: protaus
                port:
                  number: 8080
